--- a/A1b_DL_TC5033_AD2023_andrea_.ipynb
+++ b/A1b_DL_TC5033_AD2023_andrea_.ipynb
@@ -1306,31 +1306,31 @@
       },
       "outputs": [],
       "source": [
-        "class Sequential_layers():\n",
+        "class Sequential_layers(): #similar to pytorch\n",
         "    def __init__(self, layers):\n",
         "        '''\n",
-        "        layers - lista que contiene objetos de tipo Linear, ReLU\n",
+        "        layers - list which contains Linear/ReLU type objects.\n",
         "        '''\n",
-        "        self.layers = layers\n",
-        "        self.x = None\n",
-        "        self.outputs = {}\n",
+        "        self.layers = layers #list of layers\n",
+        "        self.x = None #saves Z outputs or activations A of each layer in forward pass. Temporary save all activations\n",
+        "        self.outputs = {} #dictionary for savings activations A more permanently for backpropagation\n",
         "    def __call__(self, X):\n",
-        "        self.x = X\n",
-        "        self.outputs['l0'] = self.x\n",
-        "        for i, layer in enumerate(self.layers, 1):\n",
-        "            self.x = layer(self.x)\n",
-        "            self.outputs['l'+str(i)]=self.x\n",
-        "        return self.x\n",
-        "    def backward(self):\n",
-        "        for i in reversed(range(len(self.layers))):\n",
-        "            self.layers[i].backward(self.outputs['l'+str(i)], self.outputs['l'+str(i+1)])\n",
+        "        self.x = X  #X input\n",
+        "        self.outputs['l0'] = self.x #Layer0 (l0) is equal to input elements.\n",
+        "        for i, layer in enumerate(self.layers, 1): #enumerate elements from layers since #1\n",
+        "            self.x = layer(self.x) # temporary save each element from layers (linear/reLU objects)\n",
+        "            self.outputs['l'+str(i)]=self.x #save in outputs dictionay\n",
+        "        return self.x #it will have the values of last layer (scores)\n",
+        "    def backward(self): # to implement backward pass to all layers (in each instance & object in self).\n",
+        "        for i in reversed(range(len(self.layers))): #enumerate in reverse doesn't exists\n",
+        "            self.layers[i].backward(self.outputs['l'+str(i)], self.outputs['l'+str(i+1)]) #inputs=li, outputs=li+1\n",
         "    def update(self, learning_rate = 1e-3):\n",
         "        for layer in self.layers:\n",
-        "            if isinstance(layer, ReLU): continue\n",
-        "            layer.W = layer.W - learning_rate * layer.W.grad\n",
+        "            if isinstance(layer, ReLU): continue #Linear has parameters to update, ReLU doesn't, so we skip it.\n",
+        "            layer.W = layer.W - learning_rate * layer.W.grad #Stochastic learning descent\n",
         "            layer.b = layer.b - learning_rate * layer.b.grad\n",
-        "    def predict(self, X):\n",
-        "        return np.argmax(self.__call__(X))"
+        "    def predict(self, X): #only for trained model, to predict model's output\n",
+        "        return np.argmax(self.__call__(X)) # return the best score (maximum value)"
       ]
     },
     {
