--- a/A1b_DL_TC5033_AD2023_andrea_.ipynb
+++ b/A1b_DL_TC5033_AD2023_andrea_.ipynb
@@ -1350,17 +1350,17 @@
       },
       "outputs": [],
       "source": [
-        "def softmaxXEntropy(x, y):\n",
-        "    batch_size = x.shape[1]\n",
+        "def softmaxXEntropy(x, y): #Softmax X entropy, receives x=scores & y=labels\n",
+        "    batch_size = x.shape[1] #column dimension has the size of the batch\n",
         "    exp_scores = np.exp(x)\n",
         "    probs = exp_scores / exp_scores.sum(axis = 0)\n",
-        "    preds = probs.copy()\n",
-        "    # Cost\n",
-        "    y_hat = probs[y.squeeze(), np.arange(batch_size)]\n",
-        "    cost = np.sum(-np.log(y_hat)) / batch_size\n",
+        "    preds = probs.copy() #copy of probs to be able to return it\n",
+        "    # Cost Function\n",
+        "    y_hat = probs[y.squeeze(), np.arange(batch_size)] #prediction = y_hat\n",
+        "    cost = np.sum(-np.log(y_hat)) / batch_size # -ln(model prediction)\n",
         "    # Calculate gradients\n",
-        "    probs[y.squeeze(), np.arange(batch_size)] -= 1 #dl/dx\n",
-        "    x.grad = probs.copy()\n",
+        "    probs[y.squeeze(), np.arange(batch_size)] -= 1 #dl/dx, select model prediction & substract the value of right class y_hat-y\n",
+        "    x.grad = probs.copy() #x=input -->value from last layer\n",
         "\n",
         "    return preds, cost"
       ]
@@ -1436,12 +1436,12 @@
       "source": [
         "def train(model, epochs, mb_size=128, learning_rate = 1e-3):\n",
         "    for epoch in range(epochs):\n",
-        "        for i, (x, y) in enumerate(create_mini_batches(mb_size, x_train, y_train)):\n",
-        "            scores = model(x.T.view(np_tensor))\n",
-        "            _, cost = softmaxXEntropy(scores, y)\n",
-        "            model.backward()\n",
+        "        for i, (x, y) in enumerate(create_mini_batches(mb_size, x_train, y_train)): #loop in minibatches function\n",
+        "            scores = model(x.T.view(np_tensor)) #receives x transposed, as np_tensor object\n",
+        "            _, cost = softmaxXEntropy(scores, y) #we just call the cost values\n",
+        "            model.backward() #backward pass function & backward in each element.\n",
         "            model.update(learning_rate)\n",
-        "        print(f'Epoch {epoch}:cost: {cost}, accuracy: {accuracy(x_val, y_val, mb_size)}')"
+        "        print(f'Epoch {epoch}:cost: {cost}, accuracy: {accuracy(x_val, y_val, mb_size)}') #we call accuracy function"
       ]
     },
     {
@@ -1457,7 +1457,7 @@
         "    total = 0\n",
         "    for i, (x, y) in enumerate(create_mini_batches(mb_size, x, y)):\n",
         "        pred = model(x.T.view(np_tensor))\n",
-        "        correct += np.sum(np.argmax(pred, axis=0) == y.squeeze())\n",
+        "        correct += np.sum(np.argmax(pred, axis=0) == y.squeeze()) #it sums correct predicted values if they are equal to equal real labels\n",
         "        total += pred.shape[1]\n",
         "    return correct/total"
       ]
@@ -1479,7 +1479,7 @@
       },
       "outputs": [],
       "source": [
-        "model = Sequential_layers([Linear(784, 200), ReLU(), Linear(200, 200), ReLU(), Linear(200, 24)])\n",
+        "model = Sequential_layers([Linear(784, 200), ReLU(), Linear(200, 200), ReLU(), Linear(200, 24)]) #Implementation\n",
         "mb_size = 512\n",
         "learning_rate = 1e-4\n",
         "epochs = 30"
@@ -1557,7 +1557,7 @@
         }
       ],
       "source": [
-        "print(accuracy(x_test, y_test, mb_size))"
+        "print(accuracy(x_test, y_test, mb_size)) #accuracy for test values"
       ]
     },
     {
