--- a/fundamentals_DL_CNN_cifar10_part1.ipynb
+++ b/fundamentals_DL_CNN_cifar10_part1.ipynb
@@ -659,32 +659,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "xcDoH-v_6frW"
       },
       "outputs": [],
       "source": [
-        "class CNN_class1(nn.Module):\n",
-        "    def __init__(self, in_channel, channel1, channel2):\n",
-        "        super().__init__()\n",
+        "#Equivalente a Sequential:\n",
+        "class CNN_class1(nn.Module): #esquema de clases da más flexibilidad en el modelo que vamos a crear.\n",
+        "    def __init__(self, in_channel, channel1, channel2): #self para llamar a instancia, # filtros de c/capa, función de inicialización de objeto tipo conv.\n",
+        "        super().__init__() #heredamos de clase module, llamamos a clase parent (hay que llamar a init de clase heredada)\n",
         "        self.conv1 = nn.Conv2d(in_channels = in_channel, out_channels = channel1,\n",
-        "                              kernel_size=3, padding = 1)\n",
+        "                              kernel_size=3, padding = 1) #1era capa convolucional, sin capas.\n",
         "        self.conv2 = nn.Conv2d(in_channels = channel1, out_channels = channel2,\n",
-        "                              kernel_size=3, padding=1)\n",
-        "        self.max_pool = nn.MaxPool2d(2,2)\n",
-        "        self.fc = nn.Linear(in_features=16*16*channel2, out_features=10)\n",
+        "                              kernel_size=3, padding=1) #2nda capa convolucional.\n",
+        "        self.max_pool = nn.MaxPool2d(2,2) #atributos en instancia de maxpooling\n",
+        "        self.fc = nn.Linear(in_features=16*16*channel2, out_features=10) #no tienen que estar en el orden en que se van a mandar a llamar\n",
         "        self.flatten = nn.Flatten()\n",
         "    def forward(self, x):\n",
-        "        x = F.relu(self.conv2(F.relu(self.conv1(x))))\n",
-        "        x = self.max_pool(x)\n",
-        "        x = self.flatten(x)\n",
+        "        x = F.relu(self.conv2(F.relu(self.conv1(x)))) #aqui se agrupan capas conv. en orden\n",
+        "        x = self.max_pool(x) #luego se agregan max pooling\n",
+        "        x = self.flatten(x) #luego se convierte en vector\n",
         "        return self.fc(x)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "zcqhElTH6frW"
       },
@@ -724,7 +725,7 @@
         }
       ],
       "source": [
-        "train(modelCNN2, optimiser, epochs)"
+        "train(modelCNN2, optimiser, epochs) #casi mismos resultados."
       ]
     },
     {
