--- a/fundamentals_DL_CNN_cifar10_part1.ipynb
+++ b/fundamentals_DL_CNN_cifar10_part1.ipynb
@@ -739,18 +739,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "y173kEIB6frX"
       },
       "outputs": [],
       "source": [
-        "conv_k_3 = lambda channel1, channel2: nn.Conv2d(channel1, channel2, kernel_size=3, padding=1)"
+        "conv_k_3 = lambda channel1, channel2: nn.Conv2d(channel1, channel2, kernel_size=3, padding=1) #variable conv. con kernel = 3."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "lrwBuRQh6frX"
       },
@@ -759,10 +759,10 @@
         "class CNN_class2(nn.Module):\n",
         "    def __init__(self, in_channel, channel1, channel2):\n",
         "        super().__init__()\n",
-        "        self.conv1 = conv_k_3(in_channel, channel1)\n",
-        "        nn.init.kaiming_uniform_(self.conv1.weight)\n",
+        "        self.conv1 = conv_k_3(in_channel, channel1) #cambian estas 2 líneas, entrada: in_channel , salida: channel1\n",
+        "        nn.init.kaiming_uniform_(self.conv1.weight) #inicialización por default es Kaiming He, hay otras opciones.\n",
         "\n",
-        "        self.conv2 = conv_k_3(channel1, channel2)\n",
+        "        self.conv2 = conv_k_3(channel1, channel2) #cambian estas 2 líneas - para hacer más eficiente el código.\n",
         "        self.max_pool = nn.MaxPool2d(2,2)\n",
         "        self.fc = nn.Linear(in_features=16*16*channel2, out_features=10)\n",
         "        self.flatten = nn.Flatten()\n",
@@ -776,7 +776,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "id": "tiuGohAS6frX"
       },
@@ -818,6 +818,17 @@
       "source": [
         "train(modelCNN3, optimiser, epochs)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Resultado muy parecido a los previos."
+      ],
+      "metadata": {
+        "id": "TmR9lbYaKQwD"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
