--- a/fundamentals_DL_CNN_cifar10_part1.ipynb
+++ b/fundamentals_DL_CNN_cifar10_part1.ipynb
@@ -1017,7 +1017,12 @@
         "id": "zWoY_CP36frg"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "#al crear nuestras propias clases tenemos mayor flexibilidad y personalizar más nuestro modelo o crear funciones que nos permitan agrupar elementos comunes que utilicemos durante nuestras capas.\n",
+        "#Con capas como batch normalization podemos mejorar nuestro modelo considerablemente\n",
+        "#Nuestras clases podemos usarlas dentro del objeto Sequential y crear así modelos más complejos haciendo uso de clases que ya hayamos creado (sin crear/repetir tanto código/de forma elegante),\n",
+        "#con ventajes de clases y ventajas de módulo Sequential."
+      ]
     },
     {
       "cell_type": "code",
