--- a/A2b_DL_TC5033_AD2023_andrea.ipynb
+++ b/A2b_DL_TC5033_AD2023_andrea.ipynb
@@ -6070,13 +6070,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5rQ2riOzMUYq",
-        "outputId": "99519e5f-76d4-4225-857a-a28f1b2f9904",
+        "outputId": "42cbe8c2-667a-42f4-fa86-cac7b55e7984",
         "ExecuteTime": {
           "end_time": "2023-10-04T02:10:05.177073900Z",
           "start_time": "2023-10-04T02:10:05.000003100Z"
@@ -6099,13 +6099,16 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 28
         }
       ],
       "source": [
-        "#import torch.nn as nn\n",
+        "# To do: Use PyTorch to implement a CNN model, accuracy should be better than the linear model\n",
         "\n",
         "class SimpleCNN(nn.Module):\n",
+        "    \"\"\"\n",
+        "    A simple CNN model for the CIFAR-10 dataset.\n",
+        "    \"\"\"\n",
         "    def __init__(self, num_classes=10):\n",
         "        super(SimpleCNN, self).__init__()\n",
         "\n",
@@ -6145,13 +6148,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kVQeye9WMUYq",
-        "outputId": "bd543e63-47fa-4fe1-b893-e478bfbf9d55",
+        "outputId": "64b2fdd5-6410-4b68-9f4e-c15d4efafecc",
         "ExecuteTime": {
           "end_time": "2023-10-04T02:39:49.656625100Z",
           "start_time": "2023-10-04T02:32:51.481136600Z"
@@ -6162,33 +6165,32 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch [0/10], Loss: 2.1493\n"
+            "Epoch [0/10], Loss: 2.1574\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[2.149302943435776,\n",
-              " 1.780994292262875,\n",
-              " 1.5402852004141454,\n",
-              " 1.4162864492982246,\n",
-              " 1.3252067254937214,\n",
-              " 1.2445327834704953,\n",
-              " 1.172949851397663,\n",
-              " 1.1106613946082953,\n",
-              " 1.0501536315359423,\n",
-              " 0.9986653651880182]"
+              "[2.157402445135824,\n",
+              " 1.7831975355782472,\n",
+              " 1.5327096113463496,\n",
+              " 1.4032608357536824,\n",
+              " 1.315648246451717,\n",
+              " 1.242286218096838,\n",
+              " 1.1736005199382373,\n",
+              " 1.1122784555872993,\n",
+              " 1.0547302007827613,\n",
+              " 0.9990749302727487]"
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 29
         }
       ],
       "source": [
         "# 2. Define an optimizer\n",
         "learning_rate = 1e-2\n",
-        "\n",
         "\n",
         "optimiser1 = optim.SGD(modelCNN1.parameters(), lr=learning_rate)\n",
         "epochs=10\n",
@@ -6198,13 +6200,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vaGzHe_QMUYq",
-        "outputId": "b7c507a5-4c3e-4d4c-e4cf-1491d267bc76",
+        "outputId": "d3fd2fb7-fad3-4e3f-9b1f-52a356bdeedd",
         "ExecuteTime": {
           "end_time": "2023-10-04T02:40:15.872449Z",
           "start_time": "2023-10-04T02:39:49.659726600Z"
@@ -6215,11 +6217,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.64846"
+              "0.60726"
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 30
         }
       ],
       "source": [
@@ -6228,22 +6230,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
-        "id": "6Q1th-ggMUYq"
+        "id": "6Q1th-ggMUYq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "954de628-3058-469a-bfcb-0c13520341fa"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SimpleCNN1(\n",
+              "  (conv1): Conv2d(3, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "  (bn1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "  (conv2): Conv2d(16, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "  (bn2): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "  (conv3): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "  (fc1): Linear(in_features=1024, out_features=512, bias=True)\n",
+              "  (fc2): Linear(in_features=512, out_features=10, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ],
       "source": [
         "#Otro intento CNN:\n",
         "class SimpleCNN1(nn.Module):\n",
+        "    \"\"\"\n",
+        "    A simple linear model for the CIFAR-10 dataset.\n",
+        "    \"\"\"\n",
         "    def __init__(self, num_classes=10):\n",
-        "        super(SimpleCNN, self).__init__()\n",
+        "        super(SimpleCNN1, self).__init__()\n",
         "\n",
         "        # Define the convolutional layers\n",
         "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=3, stride=1, padding=1)\n",
-        "        self.dropout1 = nn.Dropout(p=0.25) # dropout del 25%\n",
+        "        self.bn1 = nn.BatchNorm2d(16)\n",
+        "        #self.dropout1 = nn.Dropout(p=0.25) # dropout del 25%\n",
         "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=3, stride=1, padding=1)\n",
-        "        self.dropout1 = nn.Dropout(p=0.5) # dropout del 50%\n",
+        "        self.bn2 = nn.BatchNorm2d(32)\n",
+        "        #self.dropout1 = nn.Dropout(p=0.5) # dropout del 50%\n",
         "        self.conv3 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, stride=1, padding=1)\n",
         "\n",
         "        # Define the pooling layer\n",
@@ -6269,45 +6300,236 @@
         "        return x\n",
         "\n",
         "# Instantiate the CNN model\n",
-        "modelCNN1 = SimpleCNN1()\n",
-        "modelCNN1"
+        "modelCNN2 = SimpleCNN1()\n",
+        "modelCNN2"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "MTM94vhhMUYq"
+        "id": "MTM94vhhMUYq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "264e22b0-934b-405b-c115-017f9bf9848e"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch [0/10], Loss: 2.1248\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2.1247583438673288,\n",
+              " 1.7361507327355388,\n",
+              " 1.518565543319868,\n",
+              " 1.3960751429238283,\n",
+              " 1.3074284293462552,\n",
+              " 1.2367675881404097,\n",
+              " 1.1671795166666856,\n",
+              " 1.1056306015347581,\n",
+              " 1.0470560241843123,\n",
+              " 0.9954091867674952]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ],
+      "source": [
+        "# 2. Define an optimizer\n",
+        "learning_rate = 1e-2\n",
+        "\n",
+        "optimiser2 = optim.SGD(modelCNN2.parameters(), lr=learning_rate)\n",
+        "epochs=10\n",
+        "\n",
+        "train(modelCNN2, optimiser2, epochs,train_loader)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
-        "id": "Bf04c3emMUYq"
+        "id": "Bf04c3emMUYq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9b61a289-0122-4647-aaec-3b4bb482b7da"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.63832"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ],
+      "source": [
+        "accuracy(modelCNN2,train_loader)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
-        "id": "tgUKmE_0MUYq"
+        "id": "tgUKmE_0MUYq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a332d438-aa88-413f-9343-2442193ce304"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SimpleCNN2(\n",
+              "  (conv1): Conv2d(3, 16, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "  (bn1): BatchNorm2d(16, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "  (dropout1): Dropout(p=0.5, inplace=False)\n",
+              "  (conv2): Conv2d(16, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "  (bn2): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "  (conv3): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "  (bn3): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "  (fc1): Linear(in_features=1024, out_features=512, bias=True)\n",
+              "  (fc2): Linear(in_features=512, out_features=10, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ],
+      "source": [
+        "#Otro intento CNN 2:\n",
+        "class SimpleCNN2(nn.Module):\n",
+        "    \"\"\"\n",
+        "    A simple linear model for the CIFAR-10 dataset.\n",
+        "    \"\"\"\n",
+        "    def __init__(self, num_classes=10):\n",
+        "        super(SimpleCNN2, self).__init__()\n",
+        "\n",
+        "        # Define the convolutional layers\n",
+        "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=3, stride=1, padding=1)\n",
+        "        self.bn1 = nn.BatchNorm2d(16)\n",
+        "        self.dropout1 = nn.Dropout(p=0.25) # dropout del 25%\n",
+        "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=3, stride=1, padding=1)\n",
+        "        self.bn2 = nn.BatchNorm2d(32)\n",
+        "        self.dropout1 = nn.Dropout(p=0.5) # dropout del 50%\n",
+        "        self.conv3 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, stride=1, padding=1)\n",
+        "        self.bn3 = nn.BatchNorm2d(64)\n",
+        "\n",
+        "        # Define the pooling layer\n",
+        "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
+        "\n",
+        "        # Define the fully connected layers\n",
+        "        self.fc1 = nn.Linear(64 * 4 * 4, 512)  # CIFAR-10 images are 32x32. After 3 pooling layers, they become 4x4\n",
+        "        self.fc2 = nn.Linear(512, num_classes)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # Apply conv layers followed by pooling\n",
+        "        x = self.pool(F.relu(self.bn1(self.conv1(x))))\n",
+        "        x = self.pool(F.relu(self.bn2(self.conv2(x))))\n",
+        "        x = self.pool(F.relu(self.bn3(self.conv3(x))))\n",
+        "\n",
+        "        # Flatten the tensor\n",
+        "        x = x.view(-1, 64 * 4 * 4)\n",
+        "\n",
+        "        # Apply the fully connected layers\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        x = self.fc2(x)\n",
+        "\n",
+        "        return x\n",
+        "\n",
+        "# Instantiate the CNN model\n",
+        "modelCNN3 = SimpleCNN2()\n",
+        "modelCNN3"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
-        "id": "qzcAEraaMUYq"
+        "id": "qzcAEraaMUYq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e8f45620-abec-4941-c04e-1faa8d939347"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch [0/10], Loss: 1.5224\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1.5224239681382923,\n",
+              " 1.1497527089570185,\n",
+              " 1.0031211868576382,\n",
+              " 0.9100520926363328,\n",
+              " 0.8414707134294388,\n",
+              " 0.7879578412493782,\n",
+              " 0.7414469089349518,\n",
+              " 0.7030942561223988,\n",
+              " 0.6687021437279709,\n",
+              " 0.6353446803129542]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ],
+      "source": [
+        "# 2. Define an optimizer\n",
+        "learning_rate = 1e-2\n",
+        "\n",
+        "optimiser3 = optim.SGD(modelCNN3.parameters(), lr=learning_rate)\n",
+        "epochs=10\n",
+        "\n",
+        "train(modelCNN3, optimiser3, epochs,train_loader)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "accuracy(modelCNN3,train_loader)"
+      ],
+      "metadata": {
+        "id": "tgjOwVrewtQU",
+        "outputId": "0210ed3c-dc92-42b7-8ec2-8fb30b646b88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.74102"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     }
   ],
   "metadata": {
