--- a/A2b_DL_TC5033_AD2023_andrea.ipynb
+++ b/A2b_DL_TC5033_AD2023_andrea.ipynb
@@ -6075,18 +6075,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "#https://pytorch.org/tutorials/beginner/blitz/cifar10_tutorial.html\n",
-        "#https://datahacker.rs/009-pytorch-building-an-artificial-neural-network-with-perceprton-on-cifar10-using-pytorch/"
-      ],
-      "metadata": {
-        "id": "q4JGL4LrhTNE"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "OvdM6G62MUYq"
@@ -6131,7 +6119,6 @@
       ],
       "source": [
         "# To do: Use PyTorch to implement a CNN model, accuracy should be better than the linear model\n",
-        "\n",
         "class SimpleCNN(nn.Module):\n",
         "    \"\"\"\n",
         "    A simple CNN model for the CIFAR-10 dataset.\n",
@@ -6140,11 +6127,11 @@
         "        super(SimpleCNN, self).__init__()\n",
         "\n",
         "        # Define the convolutional layers\n",
-        "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=3, stride=1, padding=1)\n",
-        "        self.dropout1 = nn.Dropout(p=0.25) # dropout del 25%\n",
-        "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=3, stride=1, padding=1)\n",
-        "        self.dropout1 = nn.Dropout(p=0.5) # dropout del 50%\n",
-        "        self.conv3 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, stride=1, padding=1)\n",
+        "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=3, stride=1, padding=1) # Definition of 1st convolutional layer\n",
+        "        self.dropout1 = nn.Dropout(p=0.25) # Dropout of 25%\n",
+        "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=3, stride=1, padding=1) # Definition of 2nd convolutional layer\n",
+        "        self.dropout1 = nn.Dropout(p=0.5) # Dropout of 50%\n",
+        "        self.conv3 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, stride=1, padding=1) # Definition of 3rd convolutional layer\n",
         "\n",
         "        # Define the pooling layer\n",
         "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
@@ -6154,7 +6141,7 @@
         "        self.fc2 = nn.Linear(512, num_classes)\n",
         "\n",
         "    def forward(self, x):\n",
-        "        # Apply conv layers followed by pooling\n",
+        "        # Apply conv layers, followed the activation function & by pooling\n",
         "        x = self.pool(F.relu(self.conv1(x)))\n",
         "        x = self.pool(F.relu(self.conv2(x)))\n",
         "        x = self.pool(F.relu(self.conv3(x)))\n",
@@ -6216,13 +6203,13 @@
         }
       ],
       "source": [
-        "# 2. Define an optimizer\n",
+        "# Define an optimizer, learning rate & number of epochs:\n",
         "learning_rate = 1e-2\n",
-        "\n",
         "optimiser1 = optim.SGD(modelCNN1.parameters(), lr=learning_rate)\n",
         "epochs=10\n",
         "\n",
-        "train(modelCNN1, optimiser1, epochs,train_loader)"
+        "# Let's train our model with the parameters previously defined:\n",
+        "train(modelCNN1, optimiser1, epochs, train_loader)"
       ]
     },
     {
@@ -6252,18 +6239,19 @@
         }
       ],
       "source": [
+        "# Validate the accuracy of our SimpleCNN model:\n",
         "accuracy(modelCNN1,train_loader)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 26,
       "metadata": {
         "id": "6Q1th-ggMUYq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "954de628-3058-469a-bfcb-0c13520341fa"
+        "outputId": "7d195249-c3f5-4012-ddd8-fbf40bdc52d4"
       },
       "outputs": [
         {
@@ -6276,6 +6264,7 @@
               "  (conv2): Conv2d(16, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
               "  (bn2): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
               "  (conv3): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "  (bn3): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
               "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
               "  (fc1): Linear(in_features=1024, out_features=512, bias=True)\n",
               "  (fc2): Linear(in_features=512, out_features=10, bias=True)\n",
@@ -6283,26 +6272,26 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 26
         }
       ],
       "source": [
-        "#Otro intento CNN:\n",
+        "# Another try for our CNN model, this time we add Batch Normalization to each conv layer & remove the dropout layers:\n",
         "class SimpleCNN1(nn.Module):\n",
         "    \"\"\"\n",
-        "    A simple linear model for the CIFAR-10 dataset.\n",
+        "    A simple linear model for the CIFAR-10 dataset. Batch Normalization is added to the output of each conv layer & the dropout layers are removed\n",
         "    \"\"\"\n",
         "    def __init__(self, num_classes=10):\n",
         "        super(SimpleCNN1, self).__init__()\n",
         "\n",
         "        # Define the convolutional layers\n",
-        "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=3, stride=1, padding=1)\n",
-        "        self.bn1 = nn.BatchNorm2d(16)\n",
-        "        #self.dropout1 = nn.Dropout(p=0.25) # dropout del 25%\n",
-        "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=3, stride=1, padding=1)\n",
-        "        self.bn2 = nn.BatchNorm2d(32)\n",
-        "        #self.dropout1 = nn.Dropout(p=0.5) # dropout del 50%\n",
-        "        self.conv3 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, stride=1, padding=1)\n",
+        "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=3, stride=1, padding=1) # Definition of 1st convolutional layer\n",
+        "        self.bn1 = nn.BatchNorm2d(16) # Batch Normalization for 1st layer\n",
+        "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=3, stride=1, padding=1) # Definition of 2nd convolutional layer\n",
+        "        self.bn2 = nn.BatchNorm2d(32) # Batch Normalization for 2nd layer\n",
+        "        #self.dropout1 = nn.Dropout(p=0.5) # Dropout of 50%\n",
+        "        self.conv3 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, stride=1, padding=1) # Definition of 3rd convolutional layer\n",
+        "        self.bn3 = nn.BatchNorm2d(64) # Batch Normalization for 3rd layer\n",
         "\n",
         "        # Define the pooling layer\n",
         "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
@@ -6312,10 +6301,10 @@
         "        self.fc2 = nn.Linear(512, num_classes)\n",
         "\n",
         "    def forward(self, x):\n",
-        "        # Apply conv layers followed by pooling\n",
-        "        x = self.pool(F.relu(self.conv1(x)))\n",
-        "        x = self.pool(F.relu(self.conv2(x)))\n",
-        "        x = self.pool(F.relu(self.conv3(x)))\n",
+        "        # Apply conv layers followed by batch normalization, the activation function & by pooling\n",
+        "        x = self.pool(F.relu(self.bn1(self.conv1(x))))\n",
+        "        x = self.pool(F.relu(self.bn2(self.conv2(x))))\n",
+        "        x = self.pool(F.relu(self.bn3(self.conv3(x))))\n",
         "\n",
         "        # Flatten the tensor\n",
         "        x = x.view(-1, 64 * 4 * 4)\n",
@@ -6333,75 +6322,76 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 27,
       "metadata": {
         "id": "MTM94vhhMUYq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "264e22b0-934b-405b-c115-017f9bf9848e"
+        "outputId": "42101235-2aa2-4d3c-a15b-19a12a6bdd00"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch [0/10], Loss: 2.1248\n"
+            "Epoch [0/10], Loss: 1.5199\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[2.1247583438673288,\n",
-              " 1.7361507327355388,\n",
-              " 1.518565543319868,\n",
-              " 1.3960751429238283,\n",
-              " 1.3074284293462552,\n",
-              " 1.2367675881404097,\n",
-              " 1.1671795166666856,\n",
-              " 1.1056306015347581,\n",
-              " 1.0470560241843123,\n",
-              " 0.9954091867674952]"
+              "[1.519910371364535,\n",
+              " 1.1532756001748088,\n",
+              " 1.0000617385215467,\n",
+              " 0.9107128520832037,\n",
+              " 0.8410112372673381,\n",
+              " 0.7869320630341234,\n",
+              " 0.7403849452124227,\n",
+              " 0.7014390377284926,\n",
+              " 0.6638020770933927,\n",
+              " 0.6287316559525706]"
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 27
         }
       ],
       "source": [
-        "# 2. Define an optimizer\n",
+        "# Define an optimizer, the learning rate & number of epochs:\n",
         "learning_rate = 1e-2\n",
-        "\n",
         "optimiser2 = optim.SGD(modelCNN2.parameters(), lr=learning_rate)\n",
         "epochs=10\n",
         "\n",
+        "# Let's train our model with the parameters previously defined:\n",
         "train(modelCNN2, optimiser2, epochs,train_loader)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 28,
       "metadata": {
         "id": "Bf04c3emMUYq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9b61a289-0122-4647-aaec-3b4bb482b7da"
+        "outputId": "211fc36f-5b4b-4d26-c601-d80ee0950ea9"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.63832"
+              "0.70994"
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 28
         }
       ],
       "source": [
+        "# Validate the accuracy of our modelCNN2:\n",
         "accuracy(modelCNN2,train_loader)"
       ]
     },
@@ -6439,23 +6429,23 @@
         }
       ],
       "source": [
-        "#Otro intento CNN 2:\n",
+        "# Another try for our CNN model, this time we leave the Batch Normalization to each conv layer & add again the dropout layers:\n",
         "class SimpleCNN2(nn.Module):\n",
         "    \"\"\"\n",
-        "    A simple linear model for the CIFAR-10 dataset.\n",
+        "    A simple linear model for the CIFAR-10 dataset. Batch Normalization is added to the output of each conv layer & the dropout layers are added once again.\n",
         "    \"\"\"\n",
         "    def __init__(self, num_classes=10):\n",
         "        super(SimpleCNN2, self).__init__()\n",
         "\n",
         "        # Define the convolutional layers\n",
-        "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=3, stride=1, padding=1)\n",
-        "        self.bn1 = nn.BatchNorm2d(16)\n",
-        "        self.dropout1 = nn.Dropout(p=0.25) # dropout del 25%\n",
-        "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=3, stride=1, padding=1)\n",
-        "        self.bn2 = nn.BatchNorm2d(32)\n",
-        "        self.dropout1 = nn.Dropout(p=0.5) # dropout del 50%\n",
-        "        self.conv3 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, stride=1, padding=1)\n",
-        "        self.bn3 = nn.BatchNorm2d(64)\n",
+        "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=16, kernel_size=3, stride=1, padding=1) # Definition of 1st convolutional layer\n",
+        "        self.bn1 = nn.BatchNorm2d(16) # Batch Normalization for 1st layer\n",
+        "        self.dropout1 = nn.Dropout(p=0.25) # Dropout of 25%\n",
+        "        self.conv2 = nn.Conv2d(in_channels=16, out_channels=32, kernel_size=3, stride=1, padding=1) # Definition of 2nd convolutional layer\n",
+        "        self.bn2 = nn.BatchNorm2d(32) # Batch Normalization for 2nd layer\n",
+        "        self.dropout1 = nn.Dropout(p=0.5) # Dropout of 50%\n",
+        "        self.conv3 = nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, stride=1, padding=1) # Definition of 3rd convolutional layer\n",
+        "        self.bn3 = nn.BatchNorm2d(64) # Batch Normalization for 3rd layer\n",
         "\n",
         "        # Define the pooling layer\n",
         "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2, padding=0)\n",
@@ -6465,7 +6455,7 @@
         "        self.fc2 = nn.Linear(512, num_classes)\n",
         "\n",
         "    def forward(self, x):\n",
-        "        # Apply conv layers followed by pooling\n",
+        "        # Apply conv layers, followed by batch normalization, activation function & by pooling\n",
         "        x = self.pool(F.relu(self.bn1(self.conv1(x))))\n",
         "        x = self.pool(F.relu(self.bn2(self.conv2(x))))\n",
         "        x = self.pool(F.relu(self.bn3(self.conv3(x))))\n",
@@ -6523,18 +6513,19 @@
         }
       ],
       "source": [
-        "# 2. Define an optimizer\n",
+        "# Define an optimizer, the learning rate & number of epochs:\n",
         "learning_rate = 1e-2\n",
-        "\n",
         "optimiser3 = optim.SGD(modelCNN3.parameters(), lr=learning_rate)\n",
         "epochs=10\n",
         "\n",
+        "# Let's train our model with the parameters previously defined:\n",
         "train(modelCNN3, optimiser3, epochs,train_loader)"
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# Validate the accuracy of our modelCNN3:\n",
         "accuracy(modelCNN3,train_loader)"
       ],
       "metadata": {
@@ -6561,20 +6552,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# 2. Define an optimizer\n",
+        "# Define an optimizer, the learning rate & number of epochs:\n",
         "learning_rate = 1e-2\n",
-        "\n",
         "optimiser4 = optim.SGD(modelCNN3.parameters(), lr=learning_rate)\n",
-        "epochs1=20\n",
+        "epochs1=20 # Here we duplicated de number of epochs\n",
         "\n",
+        "# Let's train our model with the parameters previously defined:\n",
         "train(modelCNN3, optimiser4, epochs1, train_loader)"
       ],
       "metadata": {
-        "id": "H3iWKAnFCF6m",
-        "outputId": "91cee3d4-f92b-4e7c-8d61-a27e81dcad7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "H3iWKAnFCF6m",
+        "outputId": "91cee3d4-f92b-4e7c-8d61-a27e81dcad7b"
       },
       "execution_count": 21,
       "outputs": [
@@ -6620,14 +6611,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# Validate the accuracy of our modelCNN3 (with epochs = 20):\n",
         "accuracy(modelCNN3,train_loader)"
       ],
       "metadata": {
-        "id": "awtcMvm2MW3W",
-        "outputId": "4bfd9c4b-f0be-4058-c3c7-ccae9c3297d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "awtcMvm2MW3W",
+        "outputId": "4bfd9c4b-f0be-4058-c3c7-ccae9c3297d5"
       },
       "execution_count": 22,
       "outputs": [
@@ -6644,27 +6636,45 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Validate the accuracy of our model in the test dataset.\n",
+        "accuracy(modelCNN3,test_loader)"
+      ],
+      "metadata": {
+        "id": "jtyiuk3nN6jl",
+        "outputId": "fff47b7f-0790-4dde-8439-e76d365e2527",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8646"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "Bibliografía:\n",
+        "## **Bibliografía:**\n",
         "\n",
-        "*"
+        "* Pepe Cantoral, Ph.D. (2022, January 15). Red Neuronal Convolucional en PyTorch / Tutorial de PyTorch para CNN - Parte 1 [Video]. YouTube. https://www.youtube.com/watch?v=yUB9JQQVtoU\n",
+        "* Pepe Cantoral, Ph.D. (2022b, January 18). Red Neuronal Convolucional en PyTorch con Batch Normalization/Tutorial de PyTorch para CNNs -Parte 2 [Video]. YouTube. https://www.youtube.com/watch?v=NLrQZwnWjvI\n",
+        "* Training a Classifier — PyTorch Tutorials 2.1.0+cu121 documentation. (n.d.). https://pytorch.org/tutorials/beginner/blitz/cifar10_tutorial.html\n",
+        "* Zivkovic, S. (2021, November 15). #010 PyTorch - Artificial Neural Network with Perceptron on CIFAR10 using PyTorch. Master Data Science. https://datahacker.rs/009-pytorch-building-an-artificial-neural-network-with-perceprton-on-cifar10-using-pytorch/"
       ],
       "metadata": {
         "id": "apMLPaUgFcA-"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#https://pytorch.org/tutorials/beginner/blitz/cifar10_tutorial.html\n",
-        "#https://datahacker.rs/009-pytorch-building-an-artificial-neural-network-with-perceprton-on-cifar10-using-pytorch/"
-      ],
-      "metadata": {
-        "id": "aR-mxLVEFbXO"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
