--- a/A2b_DL_TC5033_AD2023_andrea.ipynb
+++ b/A2b_DL_TC5033_AD2023_andrea.ipynb
@@ -5875,12 +5875,13 @@
         "# 1. Instantiate the linear model\n",
         "model1 = LinearModel()\n",
         "\n",
-        "# 2. Define an optimizer\n",
+        "# 2. Define an optimizer, learning rate & number of epochs:\n",
         "learning_rate = 1e-2\n",
-        "optimiser = optim.SGD(model1.parameters(), lr=learning_rate)\n",
+        "optimizer = optim.SGD(model1.parameters(), lr=learning_rate)\n",
         "epochs=30\n",
         "\n",
-        "train(model1, optimiser,epochs, train_loader)"
+        "# Let's train our Linear Model with our previously defined parameters:\n",
+        "train(model1, optimizer, epochs, train_loader)"
       ]
     },
     {
@@ -5910,6 +5911,7 @@
         }
       ],
       "source": [
+        "# Validate the accuracy of our simple baseline Linear model:\n",
         "accuracy(model1,train_loader)"
       ]
     },
@@ -5945,25 +5947,24 @@
       ],
       "source": [
         "# To do: Use PyTorch to create a linear model to have an initial baseline model\n",
-        "# LinearModel class is define:\n",
+        "# LinearModel1 class is define, here we added two more linear layers:\n",
         "class LinearModel1(nn.Module):\n",
         "    \"\"\"\n",
-        "    A simple linear model for the CIFAR-10 dataset.\n",
+        "    A simple linear model for the CIFAR-10 dataset. Here we added an input layer, a hidden layer an an output linear layer to the model.\n",
         "    \"\"\"\n",
         "    def __init__(self, input_dim=32*32*3, num_classes=10): #3072 = 32*32*3\n",
         "        super().__init__()\n",
         "\n",
-        "        # Define the linear layer\n",
+        "        # Define the linear layers\n",
         "        self.fc1 = nn.Linear(input_dim, 120)\n",
         "        self.fc2 = nn.Linear(120, 84)\n",
         "        self.fc3 = nn.Linear(84, num_classes)\n",
-        "        #self.dropout = nn.Dropout(p=0.5)\n",
         "\n",
         "    def forward(self, x):\n",
         "        # Flatten the input tensor\n",
         "        x = x.view(x.size(0), -1)\n",
         "\n",
-        "        # Apply the linear transformation to each layer\n",
+        "        # Apply the linear transformation to each layer and the activation function.\n",
         "        x = F.relu(self.fc1(x))\n",
         "        x = F.relu(self.fc2(x))\n",
         "        x = self.fc3(x)\n",
@@ -5981,13 +5982,13 @@
         "# 1. Instantiate the linear model\n",
         "model2 = LinearModel1()\n",
         "\n",
-        "# 2. Define an optimizer\n",
+        "# 2. Define an optimizer, learning rate & number of epochs:\n",
         "learning_rate = 1e-2\n",
-        "#criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.SGD(model2.parameters(), lr=learning_rate)\n",
         "epochs=30\n",
         "\n",
-        "train(model2, optimizer,epochs, train_loader)"
+        "# Let's train our Linear Model with our previously defined parameters:\n",
+        "train(model2, optimizer, epochs, train_loader)"
       ],
       "metadata": {
         "colab": {
@@ -6051,6 +6052,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Validate the accuracy of our Linear model with more layers:\n",
         "accuracy(model2,train_loader)"
       ],
       "metadata": {
@@ -6642,11 +6644,11 @@
         "accuracy(modelCNN3,test_loader)"
       ],
       "metadata": {
-        "id": "jtyiuk3nN6jl",
-        "outputId": "fff47b7f-0790-4dde-8439-e76d365e2527",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jtyiuk3nN6jl",
+        "outputId": "fff47b7f-0790-4dde-8439-e76d365e2527"
       },
       "execution_count": 25,
       "outputs": [
