--- a/A2c_DL_TC5033_AD2023_andrea.ipynb
+++ b/A2c_DL_TC5033_AD2023_andrea.ipynb
@@ -4481,12 +4481,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Conclusions:**\n",
-        "* The main challenge we faced during this activity is that training time for this type of pre-trained models take several hours to complete.\n",
-        "* Overall we can see that the pre-trained model ResNet50 got better accuracy results in comparison with the other 2 (ResNet18 & DenseNet169)."
+        "## **Conclusions:**\n",
+        "* The main challenge we faced during this activity is that training time for this type of pre-trained models take several hours to complete. For solving this issue, each of us tried different models separately until we got the 3 accuracy results required from the 3 pre-trained models.\n",
+        "* Overall we can see that the pre-trained model ResNet50 got better accuracy results in comparison with the other 2 (ResNet18 & DenseNet169), but not significantly higher in comparison with the accuracy results from simpler CNN models we created in activity \"A2b DL TC5033 AD2023\"."
       ],
       "metadata": {
         "id": "_aFLiGeKIcFk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Bibliography:**\n",
+        "* Model Zoo — PyTorch/Serve master documentation. (n.d.). https://pytorch.org/serve/model_zoo.html\n",
+        "* Pepe Cantoral, Ph.D. (2022c, April 27). ¿Qué es ResNet? – Redes Neuronales Residuales [Video]. YouTube. https://www.youtube.com/watch?v=gKCuWBpg1bU\n",
+        "* Pepe Cantoral, Ph.D. (2022b, January 15). Red Neuronal Convolucional en PyTorch / Tutorial de PyTorch para CNN - Parte 1 [Video]. YouTube. https://www.youtube.com/watch?v=yUB9JQQVtoU\n",
+        "* Pepe Cantoral, Ph.D. (2022d, January 18). Red Neuronal Convolucional en PyTorch con Batch Normalization/Tutorial de PyTorch para CNNs -Parte 2 [Video]. YouTube. https://www.youtube.com/watch?v=NLrQZwnWjvI"
+      ],
+      "metadata": {
+        "id": "yOv2F0k2NNb7"
       }
     }
   ],
