Creado mediante Colaboratory

--- a/A2c_DL_TC5033_AD2023_andrea_con_video.ipynb
+++ b/A2c_DL_TC5033_AD2023_andrea_con_video.ipynb
@@ -176,14 +176,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-10-04T03:20:19.376329400Z",
           "start_time": "2023-10-04T03:20:09.037389200Z"
         },
         "id": "bpGxicCMZ0kM",
-        "outputId": "2c72b39e-3faf-46c3-c627-d05a91bfd006",
+        "outputId": "27735018-63e6-4fca-a2b5-8ad6edd49f9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -277,6 +277,9 @@
       ],
       "source": [
         "# Here we can see the size of each image & label in validation dataset:\n",
+        "# Here you can see how to iterate the values of the dataloader, like any iterable object in python:\n",
+        "#It does it for each minibatch, 3 channels & images of 32x32. Y has a value for each of the images in the minibatch.\n",
+        "# Last minibatch has only 8 images.\n",
         "for i, (x, y) in enumerate(val_loader):\n",
         "    print(i, x.shape, y.shape)"
       ]
