--- a/A2c_DL_TC5033_AD2023_andrea_con_video.ipynb
+++ b/A2c_DL_TC5033_AD2023_andrea_con_video.ipynb
@@ -295,14 +295,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 37,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-10-04T03:20:19.426285100Z",
           "start_time": "2023-10-04T03:20:19.392778800Z"
         },
         "id": "spznOodvZ0kM",
-        "outputId": "0c503c7f-9dfe-4714-ca09-14dacf351c84",
+        "outputId": "ea99f1f3-0532-4ab2-e75a-8dcdb54bc170",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -809,33 +809,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 31,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-10-04T03:20:19.933042300Z",
           "start_time": "2023-10-04T03:20:19.904140800Z"
         },
-        "id": "lCuLYNwmZ0kN"
-      },
-      "outputs": [],
-      "source": [
-        "model_aux = nn.Sequential(*list(model_resnet18.children())[:-1])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {
-        "scrolled": true,
-        "ExecuteTime": {
-          "end_time": "2023-10-04T03:20:19.977845300Z",
-          "start_time": "2023-10-04T03:20:19.921472100Z"
-        },
-        "id": "arWF2t3TZ0kN",
-        "outputId": "016ca075-8ed1-4bc6-f50e-8d5428e684b2",
+        "id": "lCuLYNwmZ0kN",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fd2cb0a4-139b-4e08-f3af-c385cf1d6b7e"
       },
       "outputs": [
         {
@@ -928,16 +912,17 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 31
         }
       ],
       "source": [
-        "model_aux"
+        "model_aux = nn.Sequential(*list(model_resnet18.children())[:-1]) # We create anothe auxiliary model but without last layer [:-1] --> from first to the -1 element (witout last one)\n",
+        "model_aux # (9) block/layer is out."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 32,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-10-04T03:20:19.997442Z",
@@ -948,12 +933,12 @@
       "outputs": [],
       "source": [
         "for i, parameter in enumerate(model_aux.parameters()):\n",
-        "    parameter.requires_grad = False # We set the trainable parameter to false to \"freeze\" the model & only train the last layer."
+        "    parameter.requires_grad = False # We set the trainable parameter to false to \"freeze\" the model & only train the last layer. To avoid training of this parameters."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 33,
       "metadata": {
         "scrolled": true,
         "ExecuteTime": {
@@ -961,7 +946,7 @@
           "start_time": "2023-10-04T03:20:19.950459600Z"
         },
         "id": "wsVdgyK6Z0kO",
-        "outputId": "ed29e863-6e4e-4443-d064-753176938e9c",
+        "outputId": "71e54e11-eabc-4e94-f40e-4d47fb8e72f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1036,7 +1021,7 @@
       ],
       "source": [
         "for i, parameter in enumerate(model_aux.parameters()):\n",
-        "    print(i, parameter.requires_grad) # This method shows if each parameter will be trainable or not"
+        "    print(i, parameter.requires_grad) # This method shows if each parameter will be trainable or not (Here we see each one set to false)"
       ]
     },
     {
@@ -1050,7 +1035,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 34,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-10-04T03:20:20.099826100Z",
@@ -1082,7 +1067,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 35,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-10-04T03:20:20.122699500Z",
@@ -1099,15 +1084,15 @@
         "epochs = 3\n",
         "\n",
         "# Let's build our model:\n",
-        "model1 = nn.Sequential(model_aux,\n",
+        "model1 = nn.Sequential(model_aux, # First we passed our auxiliary model (every ResNet18 layer without the last one)\n",
         "                       nn.Flatten(), # Allows us to put our image like a vector.\n",
-        "                       nn.Linear(in_features=512, out_features= 10, bias= True))\n",
+        "                       nn.Linear(in_features=512, out_features= 10, bias= True)) # Last layer created for our CIFAR10 dataset with only 10 classes (equal to original only changing out_features to 10)\n",
         "optimiser = torch.optim.Adam(model1.parameters(), lr=lr, betas=(0.9, 0.999))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 36,
       "metadata": {
         "scrolled": true,
         "ExecuteTime": {
@@ -1115,7 +1100,7 @@
           "start_time": "2023-10-04T03:20:20.012787200Z"
         },
         "id": "n1wpUC9iZ0kO",
-        "outputId": "8f3b337c-61b2-4c43-f961-ab8aef3c4830",
+        "outputId": "48646cb6-c69c-4711-f13e-6b93b1a093a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1215,11 +1200,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 36
         }
       ],
       "source": [
-        "#Visualization of the content of the model1:\n",
+        "#Visualization of the content of the model1 (validating the layers of our new model with flatten and last layer for 10 classes):\n",
         "model1"
       ]
     },
@@ -1249,7 +1234,8 @@
         }
       ],
       "source": [
-        "# Training model1:\n",
+        "# Training model1 with pre-trained model ResNet18 (takes considerably longer time going through all layers, without training them):\n",
+        "# Abstraction capacity from ImageNet model is so good that it works for practically any type of image dataset.\n",
         "train(model1, optimiser, epochs)"
       ]
     },
