--- a/A2c_DL_TC5033_AD2023_andrea_con_video.ipynb
+++ b/A2c_DL_TC5033_AD2023_andrea_con_video.ipynb
@@ -1236,6 +1236,7 @@
       "source": [
         "# Training model1 with pre-trained model ResNet18 (takes considerably longer time going through all layers, without training them):\n",
         "# Abstraction capacity from ImageNet model is so good that it works for practically any type of image dataset.\n",
+        "# Only useful for when we don't have a really large dataset.\n",
         "train(model1, optimiser, epochs)"
       ]
     },
@@ -1263,7 +1264,7 @@
         }
       ],
       "source": [
-        "# Accuracy of model1:\n",
+        "# Accuracy of model1 in test dataset:\n",
         "acc_model1 = accuracy(model1, test_loader)\n",
         "print(acc_model1)"
       ]
